# ironic-neutron-plugin

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
baremetal_neutron_extension/: baremetal_extension_driver.py  config.py  exceptions.py
baremetal_neutron_extension/db/: db.py  models.py
baremetal_neutron_extension/drivers/: base.py  manager.py
baremetal_neutron_extension/drivers/cisco/: commands.py  driver.py  utils.py
baremetal_neutron_extension/extensions/: commit.py  switch.py  trunked.py
baremetal_neutron_extension/tests/: base.py
baremetal_neutron_extension/tests/unit/: test_driver_manager.py  test_plugin.py
baremetal_neutron_extension/tests/unit/drivers/cisco/: fixtures.py  test_cisco.py
baremetal_neutron_extension/tests/unit/extensions/: test_switch.py
etc/: neutron.conf.dist
etc/neutron/: neutron.conf  run.py
ironic_neutron_plugin/: __init__.py  config.py  exceptions.py  plugin.py
ironic_neutron_plugin/common/: faults.py
ironic_neutron_plugin/db/: db.py  models.py
ironic_neutron_plugin/drivers/: base.py  manager.py
ironic_neutron_plugin/drivers/cisco/: README  __init__.py  commands.py  driver.py  nexus_network_driver.py  nexus_snippets.py  utils.py
ironic_neutron_plugin/extensions/: commit.py  switch.py  trunked.py
ironic_neutron_plugin/tests/: base.py
ironic_neutron_plugin/tests/unit/: plugin.py  test_driver_manager.py  test_plugin.py
ironic_neutron_plugin/tests/unit/drivers/cisco/: fixtures.py  test_cisco.py
ironic_neutron_plugin/tests/unit/extensions/: test_commit.py  test_switch.py
neutron_db_change/: 3caaf9877f73_ironic_plugin.py  update.sh
scripts/: neutron-server.sh  neutronrc  switch.py  test_fixtures.py
scripts/crypto/: README.md  crypto.py
scripts/interfaces/: gen.py  interfaces.template
