[metadata]
name = ironic-neutron-plugin
author = Rackspace
author-email = teeth-dev@lists.rackspace.com
summary = Bare Metal Neutron Plugin
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    ironic_neutron_plugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ironic = ironic_neutron_plugin.plugin:IronicMechanismDriver
