[metadata]
name = baremetal_neutron_extension
version = 2014.2.2
summary = Baremetal Extension driver for Neutron ML2 Plugin
description-file =
    README.md
author = Rackspace, Hewlett-Packard
author-email = teeth-dev@lists.rackspace.com,omarun@gmail.com
home-page = http://www.openstack.org/
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    baremetal_neutron_extension

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers =
    ironic = baremetal_neutron_extension.baremetal_extension_driver:IronicMechanismDriver
neutron.ml2.extension_drivers =
    ironic = baremetal_neutron_extension.baremetal_extension_driver:IronicExtensionDriver
